<resources>
    <string name="app_name">LockTrust</string>
    <string name="home">Home</string>
    <string name="facebook_app_id">2572558153072098</string>
    <string name="fb_login_protocol_scheme">fb2572558153072098</string>
    <string name="my_courses">My Courses</string>
    <string name="reports">Reports</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="policies">Policies</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_with_google">Continue in with Google</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="enter_email_id">Enter Your Email ID </string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="continue_with_facebook">Continue in with Facebook</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_valid_passord">Please enter password should contain  length 6 in which 1 small alphabet, 1 capital alphabet, 1 number letter, 1 special character.</string>
    <string name="please_enter_password">Please enter password atleast 6 digit.</string>
    <string name="please_enter_Mobile">Please enter valid contact.</string>
    <string name="skip">Skip</string>
    <string name="one_to_one_learning">1-2-1 Learning</string>
    <string name="welcome_screen_one_desc">Customised tutorials based on the student\'s learning process</string>
    <string name="next">Next</string>
    <string name="qulified_tutors">Qualified Tutors</string>
    <string name="welcome_screen_two_desc">Learn from British tutors with 10+ years of experience</string>
    <string name="interactive_live_tutorials">Interactive Live Tutorials</string>
    <string name="welcome_screen_three_desc">2 way interaction between student and the Tutor</string>
    <string name="get_started">Get Started</string>
    <string name="under_construction">This section is under construction.</string>
    <string name="is_first_time_open_app">isFirstTimeOpenApp</string>
    <string name="wish_list">Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="locktrust_credits_title">locktrust Credits</string>
    <string name="locktrust_credits">locktrust Credits</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="does_and_donts"><![CDATA[Dos & don\'ts]]></string>
    <string name="despute">Dispute Resolution Policy</string>
    <string name="pay_refund">Refund Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="email_info">Don’t hesitate to get in touch if you have any queries, suggestions or partnership opportunities to discuss.</string>
    <string name="email_id_locktrust">info@locktrust.com</string>
    <string name="email_us">Email Us</string>
    <string name="call_us">Call Us</string>
    <string name="call_us_info">Enquire about anything, a tutorial or a tutor, we’re happy to help you.</string>
    <string name="contact_no">9337700700</string>
    <string name="support">Support</string>
    <string name="support_info">"Get in touch with our technical support team if you require any assistance. "</string>
    <string name="support_center">Support Centre</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="phone_no">Phone Number</string>
    <string name="how_help">How can we help you?</string>
    <string name="select_your_city">Select your City</string>
    <string name="send_message">Send Message</string>
    <string name="qualified_tuto_info"><![CDATA[A League of highly qualified & professional tutors.]]></string>
    <string name="personalised_learning">Personalised Learning</string>
    <string name="personalised_learning_info">One-to-one Tutorials allow student to learn at their own pace and convience.</string>
    <string name="engaging_tutorials">Engaging Tutorials</string>
    <string name="engaging_tutorials_info">Direct communication between student and teacher.</string>
    <string name="live_interactive"><![CDATA[Live & interactive]]></string>
    <string name="live_interactive_info">Two way interaction between student and teacher.</string>
    <string name="about_locktrust">About locktrust</string>
    <string name="about_us_content">locktrust is an intellectual fusion between the British and Indian education system. We believe that the pen is mightier than the sword and strive to help students unleash their full potential.We provide a wide range of popular subjects for students from Class 1-12, that they can purchase as a whole or just in section…, as well as Spoken English and Parents Tutorials (designed to help parents enhance their child’s academic performance). Our aim is to build a strong connection between students, parents and their teachers.</string>
    <string name="terms_condition_title">Terms and Conditions of Access or Use Effective 25th May 2020.</string>
    <string name="check_internet_connection">Please check internet connection</string>
    <string name="no_record_found">No Record Found</string>
    <string name="login_as_parent">Login as Parent</string>
    <string name="login_as_child">Login as Child</string>
    <string name="access_token">accessToken</string>
    <string name="user_id">userId</string>
    <string name="user_name">userName</string>
    <string name="user_contact">userContact</string>
    <string name="user_email">userEmail</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="i_m_in_for">I’m in for emails with exciting discount and Personalised recommendations</string>
    <string name="i_d_in_for">I’d like to receive emails</string>
    <string name="i_agree_to_terms_and_condition">I agree to </string>
    <string name="i_agree_to_privacy_policy">I agree to the company </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_enter_name">Please enter full name.</string>
    <string name="please_enter_mobile_no">Please enter mobile number.</string>
    <string name="please_enter_valid_mobile">Please enter valid mobile number.</string>
    <string name="please_enter_city">Please enter city.</string>
    <string name="please_accept_policy">Please accept privacy policy.</string>
    <string name="please_accept_terms_conditions">Please accept terms and conditions.</string>
    <string name="privacy_policy_title">Privacy Policy of Access or Use Effective 25th May 2020.</string>
    <string name="Despute_policy_title">DISPUTE RESOLUTION POLICY of Access or Use Effective 25th May 2020.</string>
    <string name="Pay_Refund_policy_title">PAYMENTS AND REFUNDS POLICY of Access or Use Effective 25th May 2020.</string>
    <string name="dodont_Tutor_title">Tutor</string>
    <string name="dodont_Parent_title">Parent</string>
    <string name="about_us">About Us</string>
    <string name="user_type">userType</string>
    <string name="select_your_state">Select your state</string>
    <string name="error_select_state">Please select state.</string>
    <string name="err_enter_full_name">Please enter full name.</string>
    <string name="err_enter_phone_no">Please enter phone number.</string>
    <string name="err_enter_valid_phone_no">Please enter valid phone number</string>
    <string name="err_enter_state">Please select state.</string>
    <string name="err_enter_city">Please select city.</string>
    <string name="contactUs_message">Thank you! We will back to you soon.</string>
    <string name="submit">Submit</string>
    <string name="retrive_your_password">Retrieve Your Password</string>
    <string name="err_enter_help_details">Please enter help details.</string>
    <string name="schedule_now">Schedule Now</string>
    <string name="search_for_courses_and_tutors">Search for courses and tutors</string>
    <string name="top_subjects">Top Subjects</string>
    <string name="explore_all">Explore All</string>
    <string name="recent_purchase">Recent Purchases</string>
    <string name="view_all">View All</string>
    <string name="feature_courses">Featured Courses</string>
    <string name="rs">\u20B9</string>
    <string name="pound">\uffe1</string>
    <string name="no_purchase_course_found">Looks Like You Have No Recent Purchases</string>
    <string name="no_feature_courses">Not Found Featur Courses</string>
    <string name="test">Update by Javed</string>
    <string name="tutorials">Tutorials</string>
    <string name="tutorial">Tutorial</string>
    <string name="course_details">Course Details</string>
    <string name="duration_lable">Duration:</string>
    <string name="about_this_course">About This Course</string>
    <string name="course_features">"Course Features "</string>
    <string name="courses">All Courses</string>
    <string name="tutors">All Tutors</string>
    <string name="book_a_schedule">BOOK A SCHEDULE</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="enquire_now">Enquire Now</string>
    <string name="view_profile">View Profile</string>
    <string name="courses_and_tutors"><![CDATA[Courses & Tutors]]></string>
    <string name="schedule_tutorials">Scheduled Courses </string>
    <string name="unschedule_tutorials">Unscheduled Courses</string>
    <string name="my_tutors">My Tutors</string>
    <string name="already_in_cart">This course is already in the cart.</string>
    <string name="successfully_add_to_cart">Successfully add in to the cart.</string>
    <string name="checkout">Checkout</string>
    <string name="move_to_wish_list">Move to wish list</string>
    <string name="remove">remove</string>
    <string name="successfully_add_to_wish_list">Successfully add the wish list.</string>
    <string name="already_in_wish_list">This course is alredy in the wish list.</string>
    <string name="cart_total">Cart Total</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="available_special_discount">Apply Discount Code</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="err_coupon_code">Please enter coupon code.</string>
    <string name="more">more</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender*</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="date_of_joining">Date Of Joining</string>
    <string name="enter_address">Enter Address</string>
    <string name="edit">Edit</string>
    <string name="view_student_profile">View Student Profile</string>
    <string name="view_parent_profile">View Parent Profile</string>
    <string name="success_message">Your transaction has been successful.\n To continue your exciting journey of
    1-2-1 online learning schedule your tutorial now!</string>
    <string name="success">Success</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="enrol_now_to_learn_online_from_the_uk_s_best_teachers">Enrol now to learn online from the UK\'s best teachers</string>
    <string name="sign_in">Sign In</string>
</resources>