<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".Fragments.ContactUsFragment">

  <ScrollView
    style="@style/matchWidth"
      android:scrollbars="none">
      <LinearLayout
          style="@style/matchWidth"
          android:orientation="vertical"
          android:layout_marginStart="@dimen/margin_layout_common"
          android:layout_marginEnd="@dimen/margin_layout_common">
<!--        email us-->
        <RelativeLayout
            style="@style/matchWidth"
            android:layout_marginTop="@dimen/margin_fifty">
            <ImageView
                style="@style/imgContactUs"
                android:id="@+id/ivEmail"
                android:src="@drawable/email"/>
            <LinearLayout
                style="@style/wrapBoth"
                android:layout_toEndOf="@+id/ivEmail"
                android:layout_marginStart="@dimen/margin_ten"
                android:orientation="vertical">
                <com.example.locktrust.widgets.CustomTextViewHeavy
                   style="@style/tvContactUs"
                    android:textSize="@dimen/common_text"
                    android:text="@string/email_us"
                    />
                <com.example.locktrust.widgets.TextView
                    style="@style/tvContactUs"
                    android:id="@+id/tvEmailDescription"
                    android:textSize="@dimen/text_small"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:text="@string/email_info"
                    />
                <com.example.locktrust.widgets.TextView
                    style="@style/tvContactUs"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/text_small"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:autoLink="email"
                    android:text="@string/email_id_locktrust"
                    />

            </LinearLayout>


        </RelativeLayout>
<!--          call us-->
          <RelativeLayout
              style="@style/matchWidth"
              android:layout_marginTop="@dimen/margin_common">
              <ImageView
                style="@style/imgContactUs"
                  android:id="@+id/ivCallUs"
                  android:src="@drawable/call_us"/>
              <LinearLayout
                  style="@style/wrapBoth"
                  android:layout_toEndOf="@+id/ivCallUs"
                  android:layout_marginStart="@dimen/margin_ten"
                  android:orientation="vertical">
                  <com.example.locktrust.widgets.CustomTextViewHeavy
                      style="@style/tvContactUs"
                      android:textSize="@dimen/common_text"
                      android:text="@string/call_us"
                      />
                  <com.example.locktrust.widgets.TextView
                      style="@style/tvContactUs"
                      android:id="@+id/tvCallUsDescription"
                      android:textSize="@dimen/text_small"
                      android:layout_marginTop="@dimen/margin_ten"
                      android:text="@string/call_us_info"
                      />
                  <com.example.locktrust.widgets.TextView
                      style="@style/tvContactUs"
                      android:id="@+id/tvCallUs"
                      android:padding="@dimen/margin_small"
                      android:textColor="@color/darkBlue"
                      android:textSize="@dimen/text_small"
                      android:layout_marginTop="@dimen/margin_ten"
                      android:autoLink="phone"
                      android:text="@string/contact_no"
                      />

              </LinearLayout>


          </RelativeLayout>
<!--           support     -->
          <RelativeLayout
              style="@style/matchWidth"
              android:layout_marginTop="@dimen/margin_common">
              <ImageView
                  style="@style/imgContactUs"
                  android:id="@+id/ivSupport"
                  android:src="@drawable/support"/>
              <LinearLayout
                  style="@style/wrapBoth"
                  android:layout_toEndOf="@+id/ivSupport"
                  android:layout_marginStart="@dimen/margin_ten"
                  android:orientation="vertical">
                  <com.example.locktrust.widgets.CustomTextViewHeavy
                      style="@style/tvContactUs"
                      android:textSize="@dimen/common_text"
                      android:text="@string/support"
                      />
                  <com.example.locktrust.widgets.TextView
                      style="@style/tvContactUs"
                      android:id="@+id/tvSupport"
                      android:textSize="@dimen/text_small"
                      android:layout_marginTop="@dimen/margin_ten"
                      android:text="@string/support_info"
                      />
                  <com.example.locktrust.widgets.TextView
                      style="@style/tvContactUs"
                      android:id="@+id/tvContacts"
                      android:textColor="@color/darkBlue"
                      android:textSize="@dimen/text_small"
                      android:layout_marginTop="@dimen/margin_ten"
                      android:paddingTop="@dimen/margin_small"
                      android:paddingBottom="@dimen/margin_small"
                      android:paddingStart="@dimen/margin_common"
                      android:paddingEnd="@dimen/margin_common"
                      android:background="@drawable/capsule_gradient"
                      android:text="@string/support_center"
                      />

              </LinearLayout>

          </RelativeLayout>
<!--          contact us form-->
          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:layout_marginTop="@dimen/margin_fifty"
              android:layout_marginLeft="@dimen/margin_small"
              android:layout_marginRight="@dimen/margin_small"
              android:layout_marginBottom="@dimen/margin_small"
              app:cardCornerRadius="0dp"
              app:cardElevation="@dimen/margin_small"
           >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:layout_marginStart="@dimen/margin_layout_common"
              android:layout_marginEnd="@dimen/margin_layout_common"
              android:orientation="vertical"
              >
          <RelativeLayout
              style="@style/matchWidth"
              android:gravity="center"
              android:layout_marginTop="@dimen/margin_common"

              >
              <View
                  android:layout_width="50dp"
                  android:layout_height="2dp"
                  android:id="@+id/vFirst"
                  android:layout_marginEnd="@dimen/margin_ten"
                  android:layout_centerVertical="true"
                  android:background="@color/colorPrimaryDark"/>
              <com.example.locktrust.widgets.CustomTextViewHeavy
                 style="@style/wrapBoth"
                  android:textSize="@dimen/common_text"
                  android:text="@string/contact_us"
                  android:id="@+id/tvTitleContactUs"
                  android:layout_centerVertical="true"
                  android:layout_toEndOf="@id/vFirst"
                  android:textColor="@color/colorPrimaryDark"/>
              <View
                  android:layout_width="50dp"
                  android:layout_height="2dp"
                  android:id="@+id/vSecond"
                  android:layout_marginStart="@dimen/margin_ten"
                  android:layout_toEndOf="@id/tvTitleContactUs"
                  android:layout_centerVertical="true"
                  android:background="@color/colorPrimaryDark"/>
          </RelativeLayout>
          
        <com.google.android.material.textfield.TextInputLayout
           style="@style/matchWidth">
          <com.example.locktrust.widgets.TextView
              style="@style/etContactUs"
              android:id="@+id/etFullName"
              android:hint="@string/full_name"
              android:inputType="text"
              android:imeOptions="actionDone"
              android:digits="qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM "
              android:maxLines="1"

              />
        </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              style="@style/matchWidth"
              android:layout_marginTop="@dimen/margin_ten">
              <com.example.locktrust.widgets.TextView
                  style="@style/etContactUs"
                  android:id="@+id/etEmailId"
                  android:hint="@string/email_id"
                  android:imeOptions="actionDone"
                  android:inputType="textEmailAddress"
                  android:maxLines="1"
                  />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              style="@style/matchWidth"
              android:layout_marginTop="@dimen/margin_ten">
              <com.example.locktrust.widgets.TextView
                  style="@style/etContactUs"
                  android:id="@+id/etPhoneNo"
                  android:hint="@string/phone_no"
                  android:maxLength="13"
                  android:inputType="number"
                  android:imeOptions="actionDone"
                  android:maxLines="1"
                  />
          </com.google.android.material.textfield.TextInputLayout>

              <com.google.android.material.textfield.TextInputLayout style="@style/matchWidth">

                  <com.example.locktrust.widgets.TextView
                      android:id="@+id/etState"
                      style="@style/etContactUs"
                      android:focusableInTouchMode="false"
                      android:hint="@string/select_your_state"
                      android:imeOptions="actionDone"
                      app:drawableRightCompat="@drawable/ic_drop_down"
                      android:inputType="text" />
              </com.google.android.material.textfield.TextInputLayout>
              <com.google.android.material.textfield.TextInputLayout
              style="@style/matchWidth"
              android:layout_marginTop="@dimen/margin_ten">
              <com.example.locktrust.widgets.TextView
                  style="@style/etContactUs"
                  android:id="@+id/etCity"
                  android:focusableInTouchMode="false"
                  android:hint="@string/select_your_city"
                  android:inputType="text"
                  android:imeOptions="actionDone"
                  app:drawableRightCompat="@drawable/ic_drop_down"
                  />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              style="@style/matchWidth"
              android:layout_marginTop="@dimen/margin_ten">
              <com.example.locktrust.widgets.TextView
                  style="@style/etContactUs"
                  android:id="@+id/etHelp"
                  android:hint="@string/how_help"
                  android:imeOptions="actionDone"
                  android:inputType="text"
                 />
          </com.google.android.material.textfield.TextInputLayout>
              <com.example.locktrust.widgets.CustomButton
                  style="@style/btnContactUs"
                  android:layout_width="120dp"
                  android:id="@+id/bntSendMessage"
                  android:layout_gravity="center"
                  android:layout_marginTop="@dimen/margin_ten"
                  android:layout_marginBottom="@dimen/margin_common"
                  android:text="@string/send_message"/>

          </LinearLayout>
          </androidx.cardview.widget.CardView>
      </LinearLayout>
  </ScrollView>

</RelativeLayout>